[package]
name = "websocketosc"
version = "0.1.0"
authors = ["Chikashi Miyama <chikashimiyama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ws = "0.9.0"
rosc = "0.1.6"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "test_client"
path = "src/test_client/main.rs"